tests/baselines/reference/jsxFactoryNotIdentifierOrQualifiedName.errors.txt
error TS5067: Invalid value for 'jsxFactory'. 'Element.createElement=' is not a valid identifier or qualified-name.
test.tsx(12,5): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
test.tsx(13,5): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.


!!! error TS5067: Invalid value for 'jsxFactory'. 'Element.createElement=' is not a valid identifier or qualified-name.
==== Element.ts (0 errors) ====
    declare namespace JSX {
        interface Element {
            name: string;
            isIntrinsic: boolean;
            isCustomElement: boolean;
            toString(renderId?: number): string;
            bindDOM(renderId?: number): number;
            resetComponent(): void;
            instantiateComponents(renderId?: number): number;
            props: any;
        }
    }
    export namespace Element {
        export function isElement(el: any): el is JSX.Element {
            return el.markAsChildOfRootElement !== undefined;
        }
    
        export function createElement(args: any[]) {
    
            return {
            }
        }
    }
    
    export let createElement = Element.createElement;
    
    function toCamelCase(text: string): string {
        return text[0].toLowerCase() + text.substring(1);
    }
    
==== test.tsx (2 errors) ====
    import { Element} from './Element';
    
    let c: {
    	a?: {
    		b: string
    	}
    };
    
    class A {
    	view() {
    		return [
    			<meta content="helloworld"></meta>,
    			 ~~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    			<meta content={c.a!.b}></meta>
    			 ~~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    		];
    	}
    }